--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
