--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "firebase": "^10.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
     "@material-tailwind/react": "^2.1.2",
