--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@material-tailwind/react": "^2.1.2",
